# GraspMind-AI

./: .env.example  .gitignore  README.md  ROADMAP.md  docker-compose.yml  fix_colors.py  fix_hex.py
.github/workflows/: ci.yml
.gsd/: project-context.md
backend/: README.md  pyproject.toml  render.yaml  test_auth.py
backend/migrations/: 003_byok_user_providers.sql
backend/scratch/: debug_schema.py
backend/src/graspmind/: __init__.py  config.py  main.py  supabase_client.py
backend/src/graspmind/api/: deps.py
backend/src/graspmind/api/routes/: __init__.py  analytics.py  assignments.py  auth.py  chat.py  classes.py  compliance.py  flashcards.py  history.py  knowledge.py  notebooks.py  notifications.py  providers.py  quizzes.py  sessions.py  sources.py
backend/src/graspmind/api/websockets/: chat.py
backend/src/graspmind/errors/: __init__.py  exceptions.py  handlers.py
backend/src/graspmind/memory/: __init__.py  episodic.py  knowledge_extractor.py  semantic.py  working.py
backend/src/graspmind/models/: schemas.py
backend/src/graspmind/parsers/: __init__.py  docx.py  image.py  pdf.py  slides.py  text.py
backend/src/graspmind/providers/: __init__.py  registry.py  resolver.py
backend/src/graspmind/rag/: __init__.py  bm25.py  chunker.py  embedder.py  fusion.py  hybrid_retriever.py  llm_client.py  pipeline.py  prompt_builder.py  query_rewriter.py  reranker.py  retriever.py  vector_store.py
backend/src/graspmind/security/: __init__.py  auth.py  input_sanitizer.py  key_sanitizer.py  middleware.py  rate_limiter.py  rbac.py  vault.py
backend/src/graspmind/strategies/: __init__.py
backend/src/graspmind/strategies/llm/: __init__.py  base.py  ollama_strategy.py  openai_compat.py
backend/src/graspmind/study/: __init__.py  flashcard_generator.py  quiz_generator.py  spaced_repetition.py
backend/src/graspmind/workers/: broker.py  episodic_worker.py  feynman_worker.py  ingestion.py
backend/tests/: test_api.py  test_chunker.py  test_flashcards.py  test_hybrid_rag.py  test_knowledge.py  test_memory.py  test_prompt_builder.py  test_quiz.py  test_working_memory.py
frontend/: README.md  next.config.ts  package-lock.json  package.json  proxy.ts
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  manifest.ts  page.tsx
frontend/components/: chat-panel.tsx  focus-timer.tsx  mastery-ring.tsx  nav-bar.tsx  newsletter-form.tsx  notification-bell.tsx  scratchpad.tsx  share-modal.tsx  theme-toggle.tsx
frontend/lib/: api.ts  errors.ts  store.ts  utils.ts
(+63 files in other folders)
